syntax = "proto3";

option java_package = "com.example.dictionmaster.core.data.datastore.proto.user";
option java_multiple_files = true;

import "wordinfo.proto";

message DataUser {
  int32 currentSearchCount = 1;
  uint64 firstRequestTimeInMillis = 2;
  repeated DataWordInfo wordsAlreadySearched = 3;
}